# ZeroTrustAgenticTools

./: .gitignore  README.md  build.zig  tools_manifest.json
go/: go.mod
go/cmd/ztat-go-accounting/: main.go
go/cmd/ztat-go-data-analysis/: main.go
go/cmd/ztat-go-digital-twin/: main.go
go/cmd/ztat-go-finance/: main.go
go/cmd/ztat-go-infra/: main.go
go/cmd/ztat-go-personal-assistant/: main.go
go/cmd/ztat-go-personal-shopper/: main.go
go/cmd/ztat-go-premium-layout/: main.go
go/cmd/ztat-go-sales/: main.go
go/cmd/ztat-go-scraper/: main.go
go/cmd/ztat-go-security/: main.go
go/cmd/ztat-go-support/: main.go
go/internal/common/: common.go
py/: pyproject.toml
py/ztat_tools/: accounting.py  common.py  data_analysis.py  digital_twin.py  finance.py  infra.py  personal_assistant.py  personal_shopper.py  premium_layout.py  sales.py  scraper.py  security.py  support.py
rs/: Cargo.toml
rs/src/: common.rs
src/: accounting.zig  common.zig  data-analysis.zig  digital-twin.zig  finance.zig  infra.zig  personal-assistant.zig  personal-shopper.zig  premium-layout.zig  sales.zig  scraper.zig  security.zig  support.zig
ts/: package-lock.json  package.json  tsconfig.json
ts/src/: accounting.ts  common.ts  data-analysis.ts  digital-twin.ts  finance.ts  infra.ts  interface.ts  personal-assistant.ts  personal-shopper.ts  premium-layout.ts  sales.ts  scraper.ts  security.ts  support.ts
ts/src/whatsapp/: call-reject.ts  chat-archive.ts  chat-history-sync-request.ts  chat-mute.ts  chat-pin.ts  chat-unarchive.ts  chat-unmute.ts  chat-unpin.ts  community-add.ts  (+66 more)
